# agent-gtm

./: README.md
projects/voc-amazon-reviews/: .gitignore  README.md  SKILL.md  analyze.sh  fetch.sh  pyproject.toml  scraper.sh  server.json  voc.sh
projects/voc-amazon-reviews/demo/: demo.sh  demo.tape  md2pdf.py  reddit-post.md  twitter-thread.md  wechat-article.html  wechat-article.md
projects/voc-amazon-reviews/docs/: GTM.md  ROADMAP.md  telemetry.md
projects/voc-amazon-reviews/docs/blog/: 2026-05-15-mcp-launch.md  2026-05-15-mcp-launch.platforms.md
projects/voc-amazon-reviews/docs/blog/assets/: hero-data-moat.html
projects/voc-amazon-reviews/docs/screenshots/: dashboard-preview.html
projects/voc-amazon-reviews/mcp_server/: README.md  __init__.py  csv_loader.py  dashboard.py  dashboard_template.html  otel_metrics.py  requirements-dev.txt  requirements.txt  schemas.py  server.py  tag_system.yaml  telemetry.py  tools.py
projects/voc-amazon-reviews/mcp_server/clients/: __init__.py  analyzer.py  shulex.py
projects/voc-amazon-reviews/mcp_server/tests/: test_tools.py
projects/voc-amazon-reviews/mcp_server/tests/fixtures/: sample_analyze_output.md  sample_fetch_output.json
projects/voc-amazon-reviews/scripts/: telemetry_healthcheck.sh
projects/voc-amazon-reviews/tests/: test_regression.sh  test_unit.sh
projects/voc-amazon-reviews/tests/fixtures/: analyze_mock_output.txt  api_query_resp.json  api_submit_resp.json  reviews_api_format.json  reviews_legacy_format.json
references/: audit-checklist.md  differentiation-vertical-vs-horizontal.md  four-cards-rubric.md
skills/agent-gtm/: SKILL.md
skills/gtm-swarm-data-poster/: SKILL.md
skills/hunter-x-agent/: SKILL.md
skills/hunter-x-analytics-analysis/: SKILL.md
skills/multica-hunter-x-analytics/: SKILL.md
skills/voc-ai-x-agent/: SKILL.md
x_agent/scripts/: agent_tools.py  ai_news_scout.py  author_info.py  auto_login_hunter.py  auto_login_shulex.py  auto_login_voc_ai.py  boost_hunter.py  buildlog_drafts.py  chrome.py  coach.py  coach_bot.py  env.py  (+30 more)
(+20 files in other folders)
