[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voc-amazon-reviews-mcp"
version = "0.1.1"
description = "Amazon review intelligence MCP server, on Shulex VOC OpenAPI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hunter Guo", email = "hunter.guo@mkt.voc.ai" }]
keywords = [
    "mcp",
    "mcp-server",
    "amazon",
    "reviews",
    "voc",
    "voice-of-customer",
    "ecommerce",
    "amazon-fba",
    "sentiment-analysis",
    "helium10-alternative",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "httpx>=0.27",  
    "pandas>=2.0",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.10", "build>=1.0", "twine>=5.0"]
telemetry = ["redis>=5.0"]
otel = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]

[project.scripts]   
voc-amazon-reviews-mcp = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/mguozhen/voc-amazon-reviews"
Repository = "https://github.com/mguozhen/voc-amazon-reviews"
Issues = "https://github.com/mguozhen/voc-amazon-reviews/issues"

[tool.setuptools.packages.find]
include = ["mcp_server*"]
exclude = ["mcp_server.tests*"]

[tool.setuptools.package-data]
mcp_server = ["tag_system.yaml", "dashboard_template.html"]
